[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geoapps"
version = "0.1.0"
requires-python = ">=3.10"
description = "Eo utilities for cloud-free mosaics"
authors = [
    { name = "Tomasz Dabrowa", email = "tdabrowa@student.agh.edu.pl"}
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests", "notebooks"]